// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Numeric Integer Input Mask toggle has an inputMaskFormat 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
  >
    <div
      data-tooltip-align="top"
      title="+12 (34) 5678-9012"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-form-field-type__numeric--rtl"
        id="numericField"
        name="numericField_masked"
        placeholder="+__ (__) ____-____"
        type="text"
        value="+12 (34) 5678-9012"
      />
    </div>
    <input
      name="numericField"
      type="hidden"
      value="123456789012"
    />
    <input
      name="numericField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Numeric renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-form-field-type__numeric--rtl"
        name="undefined"
        type="text"
        value=""
      />
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;
